--- a/src/Assets/Block/Show/Full.html
+++ b/src/Assets/Block/Show/Full.html
@@ -1,4 +1,4 @@
-<access Service="Control.Panel" Method="Do">
-    <span class="text-sm muted pull-right"><layout>Control:Pills/Inline</layout></span>
+<access Service="Control.Panel" Metho="Do">
+    <span class="text-sm muted pull-right"><ul class="list-inline"><layout>Control:Pills/Inline</layout></ul></span>
 </access>
 <k>Body</k>
