--- a/src/Assets/Default/PixelPerfect.html
+++ b/src/Assets/Default/PixelPerfect.html
@@ -1,4 +1,4 @@
-<div id="pixel-perfect" style="display: none; top: 0; left: 270px; width: 1366px; height: 1585px; position: absolute; z-index: 999;">
+<div id="pixel-perfect">
     <!-- <call>HTTP.URL</call>/layout.png -->
     <image>
         <Source>
@@ -6,9 +6,7 @@
             <Scope>Project/Design</Scope>
             <Where><call>HTTP.URL</call>/layout.png</Where>
         </Source>
-        <Width>1366</Width>
-        <Thumb/>
-        <Class>img img-responsive</Class>
+        <Class>img-center</Class>
     </image>
 </div>
 <jsrun>
