--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -22,8 +22,10 @@
     <css>bootstrap</css>
     <css>bootstrap:theme</css>
     <css>bootstrap:addons</css>
+    <css>font-awesome</css>
 
     <css>Default</css>
+    <css>print</css>
 
     <js>jquery:min</js>
     <js>bootstrap:min</js>
@@ -33,10 +35,9 @@
         <js>Locale:live</js>
     </environment>
     <js>modernizr</js>
-
     <js>Default:activelink</js>
     <js>Default:ajaxlink</js>
-    <css>print</css>
+
     <place>CSS</place>
     <jsrun>
           $('[data-toggle="tooltip"]').tooltip()
