--- a/src/Assets/bootstrap/Widgets/Form/Redactor.html
+++ b/src/Assets/bootstrap/Widgets/Form/Redactor.html
@@ -2,7 +2,11 @@
 <js>redactor:min</js>
 <js>redactor:ru</js>
 <jsrun>
-    $("#<k>ID</k>").redactor({lang: "ru", imageUpload: "/uploader", wym: true});
+    $("#<k>ID</k>").redactor({
+        lang: "ru",
+        imageUpload: "/uploader",
+        wym: true
+    });
 </jsrun>
 <div class="form-group">
     <label for="<k>ID</k>"><l><k>Label</k>:</l>
