--- a/src/Assets/bootstrap/Widgets/Form.html
+++ b/src/Assets/bootstrap/Widgets/Form.html
@@ -8,7 +8,7 @@
         <div class="panel-body">
             <place>Form</place>
         </div>
-        <div class="panel-footer">
+        <div class="panel-footer text-center">
             <button type="submit" class="btn btn-lg btn-primary">
                 <l><k>Entity</k>.Control:Options.<k>Purpose</k></l>
             </button>
