--- a/src/Assets/Project/OpenSearch.html
+++ b/src/Assets/Project/OpenSearch.html
@@ -1,4 +1,2 @@
-<link rel="search"
-      type="application/opensearchdescription+xml"
-      href="<call>HTTP.Proto</call><call>HTTP.Host</call>/opensearch.xml"
-      title="Поиск по <call>Project.Title</call>" />
+
+    <link rel="search" type="application/opensearchdescription+xml" href="<call>HTTP.Proto</call><call>HTTP.Host</call>/opensearch.xml" title="Поиск по <call>Project.Title</call>" />
