--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -6,14 +6,12 @@
 <html class="no-js" lang="en" prefix="og: http://ogp.me/ns#" itemscope itemtype="http://schema.org/WebPage">
 <!--<![endif]-->
 <head>
+    <title/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-
-    <title/>
-
-    <layout>Project:OpenSearch</layout>
     <layout>Project:OpenGraph</layout>
     <layout>Project:Head</layout>
+    <layout>Project:OpenSearch</layout>
 
     <description/>
 
@@ -43,9 +41,8 @@
           $('[data-toggle="tooltip"]').tooltip()
     </jsrun>
 </head>
-
 <body>
-    <layout>Schema:Audience</layout>
+    <layout>Project:Audience</layout>
     <place>Content</place>
     <place>JS</place>
     <layout>bootstrap:Developer</layout>
