--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="<call>Locale</call>"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="<call>Locale</call>"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="<call>Locale</call>"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" lang="en" prefix="og: http://ogp.me/ns#" itemscope itemtype="http://schema.org/WebPage">
+<html class="no-js" lang="<call>Locale</call>" prefix="og: http://ogp.me/ns#" itemscope itemtype="http://schema.org/WebPage">
 <!--<![endif]-->
 <head>
     <title/>
