--- a/src/Assets/Project/Audience.html
+++ b/src/Assets/Project/Audience.html
@@ -1,9 +1,9 @@
 <div itemprop="audience" itemscope itemtype="http://schema.org/PeopleAudience">
-    <div itemprop="suggestedGender" content="<call>Project.Audience.suggestedGender</call>"/>
-    <div itemprop="suggestedMinAge" content="<call>Project.Audience.suggestedMinAge</call>"/>
-    <div itemprop="suggestedMaxAge" content="<call>Project.Audience.suggestedMaxAge</call>"/>
-    <div itemprop="requiredGender" content="<call>Project.Audience.requiredGender</call>"/>
-    <div itemprop="requiredMinAge" content="<call>Project.Audience.requiredMinAge</call>"/>
-    <div itemprop="requiredMaxAge" content="<call>Project.Audience.requiredMaxAge</call>"/>
-    <div itemprop="geographicArea" content="<call>Location.Title</call>"/>
+    <span itemprop="suggestedGender" content="<call>Project.Audience.suggestedGender</call>"></span>
+    <span itemprop="suggestedMinAge" content="<call>Project.Audience.suggestedMinAge</call>"></span>
+    <span itemprop="suggestedMaxAge" content="<call>Project.Audience.suggestedMaxAge</call>"></span>
+    <span itemprop="requiredGender" content="<call>Project.Audience.requiredGender</call>"></span>
+    <span itemprop="requiredMinAge" content="<call>Project.Audience.requiredMinAge</call>"></span>
+    <span itemprop="requiredMaxAge" content="<call>Project.Audience.requiredMaxAge</call>"></span>
+    <span itemprop="geographicArea" content="<call>Location.Title</call>"></span>
 </div>
