--- a/src/Assets/Article/List.html
+++ b/src/Assets/Article/List.html
@@ -1,18 +1,6 @@
+<subtitle><l><call>Entity</call>.Control:Title</l></subtitle>
 <h1 class="page-header"><header/></h1>
-<div class="row">
-    <div class="col-lg-3">
-        <exec>
-            <Service>Entity.Catalog</Service>
-            <Method>Do</Method>
-            <Call>
-                <Entity>Article</Entity>
-                <Key>Tags</Key>
-            </Call>
-        </exec>
-    </div>
-    <div class="col-lg-9">
-        <div class="list-group">
-            <place>Content</place>
-        </div>
-    </div>
+<div class="list-group">
+    <place>Content</place>
 </div>
+<place>Pagination</place>
