--- a/src/Assets/Photo/Control/Show/Full.html
+++ b/src/Assets/Photo/Control/Show/Full.html
@@ -1,16 +1,4 @@
-<js>jquery.colorbox</js>
-<css>jquery.colorbox</css>
-<breadcrumb href="/photo/<k>ID</k>"><k>Title</k></breadcrumb>
-
 <h1><k>Title</k></h1>
-<a class="lightbox" href="/uploads/photo/<k>Image</k>" title="<k>Title</k>">
-    <img src="/uploads/photo/<k>Image</k>" class="img img-rounded" style="width: 100%;" alt="<k>Title</k>" />
-</a>
-
-<div>
-    <k>Description</k>
+<div class="content">
+    <k>Body</k>
 </div>
-
-<jsrun>
-    $('.lightbox').colorbox();
-</jsrun>
