--- a/src/Assets/Photo/Control/Show/Short.html
+++ b/src/Assets/Photo/Control/Show/Short.html
@@ -1,16 +1,17 @@
-<tr><td>
+<li class="list-group-item">
     <div class="pull-right">
-        <ul class="nav nav-pills pull-right">
-            <access Service="Control.Panel" Method="Do" Call.Bundle="<call>Entity</call>" Call.Option="Show">
-                <li><a href="/control/<call>Entity</call>/Show/<k>ID</k>">Просмотр</a></li>
-            </access>
-            <access Service="Control.Panel" Method="Do" Call.Bundle="<call>Entity</call>" Call.Option="Update">
-                <li><a href="/control/<call>Entity</call>/Update/<k>ID</k>">Редактировать</a></li>
-            </access>
-            <access Service="Control.Panel" Method="Do" Call.Bundle="<call>Entity</call>" Call.Option="Delete">
-                <li><a href="/control/<call>Entity</call>/Delete/<k>ID</k>">Удалить</a></li>
-            </access>
-        </ul>
+        <layout>Control:Pills/RUD</layout>
     </div>
-<h4><k>Title</k></h4>
-</td></tr>
+
+    <a href="/<k>Slug</k>"><h4><k>Title</k></h4></a>
+
+    <if value="<k>Menu</k>" eq="1">
+        <div class="label label-danger pull-right">Меню</div>
+    </if>
+
+    <if value="<k>Priority</k>" gt="0">
+        <l>Page.Entity:Priority</l>: <k>Priority</k>
+    </if>
+
+    <div><k>Words</k> слов, <k>Chars</k> знаков без пробелов, <k>Sickness</k>% тошноты.</div>
+</li>
