--- a/src/Assets/User/Create.html
+++ b/src/Assets/User/Create.html
@@ -1,3 +1,4 @@
 <subtitle><l>User.Create:Title</l></subtitle>
 <breadcrumb href="/join"><l>User.Create:Title</l></breadcrumb>
+<h1 class="page-header"><header/></h1>
 <place>Content</place>
