--- a/src/Assets/Security/Auth/Password.html
+++ b/src/Assets/Security/Auth/Password.html
@@ -1,7 +1,4 @@
 <div class="panel panel-default">
-    <div class="panel-heading">
-        <l>Security.Auth.Password:Title</l> <k>Project.Title</k>
-    </div>
     <div class="panel-body">
         <form role="form" method="post" action="/authenticate/Password">
             <div class="form-group">
@@ -15,9 +12,11 @@
             </div>
 
             <div class="form-group">
-                <label class="checkbox" for="TTL"><input type="checkbox" name="Remember" id="TTL" value="Long">
-                    <l>Security.Auth.Password:Remember</l>
-                </label>
+                <div class="checkbox">
+                    <label for="TTL"><input type="checkbox" name="Remember" id="TTL" value="Long">
+                        <l>Security.Auth.Password:Remember</l>
+                    </label>
+                </div>
             </div>
             <button type="submit" class="btn btn-lg btn-block btn-success"><l>Security.Auth.Password:Submit</l></button>
             <if value="<call>Project.Join.Open</call>" eq="1">
