«My ORM is totally sucks» and other adventures.

--- a/src/Assets/bootstrap/Widgets/NavlistWithIcons/Element.html
+++ b/src/Assets/bootstrap/Widgets/NavlistWithIcons/Element.html
@@ -2,12 +2,13 @@
     <a href="<k>URL</k>">
         <image>
             <Source>
-                <Scope><k>ID</k>/img</Scope>
+                <Scope><k>Bundle</k>/img</Scope>
                 <Where><k>ID</k>.png</Where>
             </Source>
             <Width>16</Width>
             <Default>Default:img/application.png</Default>
             <Class>img</Class>
+            <Alt><k>Title</k></Alt>
         </image>
         <k>Title</k>
         <block><span class="label label-<k>Status</k> pull-right"><k>Count</k></span></block>
