--- a/src/Assets/Project/Audience.html
+++ b/src/Assets/Project/Audience.html
@@ -1,4 +1,4 @@
-<div itemprop="audience" itemscope itemtype="http://schema.org/PeopleAudience">
+<div class="hide" itemprop="audience" itemscope itemtype="http://schema.org/PeopleAudience">
     <span itemprop="suggestedGender"><call>Project.Audience.suggestedGender</call></span>
     <span itemprop="suggestedMinAge"><call>Project.Audience.suggestedMinAge</call></span>
     <span itemprop="suggestedMaxAge"><call>Project.Audience.suggestedMaxAge</call></span>
