--- a/src/Assets/bootstrap/Widgets/Paginator/Prev.html
+++ b/src/Assets/bootstrap/Widgets/Paginator/Prev.html
@@ -1,1 +1,1 @@
-<li><a href="<k>URL</k>" rel="prev"> <span class="fa fa-angle-left"></span> </a></li>
+<li><a href="<k>URL</k>" rel="prev" class="paginator-prev"> <span class="fa fa-angle-left"></span> </a></li>
