--- a/src/Assets/bootstrap/Widgets/Form/Textarea.html
+++ b/src/Assets/bootstrap/Widgets/Form/Textarea.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label for="<k>Name</k>"> <l><k>Label</k></l>:
+    <label for="<k>ID</k>"> <l><k>Label</k></l>:
         <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if>
     </label>
     <k>HTML</k>
