--- a/src/Assets/bootstrap/Widgets/Form/Textfield.html
+++ b/src/Assets/bootstrap/Widgets/Form/Textfield.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label for="<k>Name</k>"> <l><k>Label</k></l>: <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if></label>
+    <label for="<k>ID</k>"> <l><k>Label</k></l>: <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if></label>
     <div class="input-group">
       <block>
           <span class="input-group-addon"><k>Prefix</k></span>
