--- a/src/Assets/bootstrap/Widgets/NavlistWithIcons/Element.html
+++ b/src/Assets/bootstrap/Widgets/NavlistWithIcons/Element.html
@@ -8,7 +8,7 @@
             <Width>16</Width>
             <Default>Default:img/application.png</Default>
             <Class>img</Class>
-            <Alt><k>Title</k></Alt>
+            <Alt><k>ID</k></Alt>
         </image>
         <k>Title</k>
         <block><span class="label label-<k>Status</k> pull-right"><k>Count</k></span></block>
