--- a/src/Assets/Control/Pills/Top.html
+++ b/src/Assets/Control/Pills/Top.html
@@ -1,4 +1,7 @@
-<div class="btn-group-vertical btn-group-lg hidden-print control-bar">
+<div class="btn-group-vertical btn-group-md hidden-print control-bar">
+    <a class="btn btn-default btn-disabled" href="#">
+        EV: <k>EV</k>/<call>EV</call>
+    </a>
     <a class="btn btn-default" href="/control/<call>Entity</call>"
        data-toggle="tooltip" data-title="ЦУП" data-placement="left">
         <span class="fa fa-wrench"></span>
