--- a/src/Assets/bootstrap/Widgets/Form/Quill.html
+++ b/src/Assets/bootstrap/Widgets/Form/Quill.html
@@ -21,7 +21,7 @@
 </jsrun>
 
 <label for="<k>ID</k>"><l><k>Label</k></l>:</label>
-<div class="form-group">
+<div class="quill-widget form-group">
     <div class="hidden" id="<k>ID</k>_Data"><k>Value</k></div>
     <div id="full-toolbar<k>ID</k>" class="toolbar ql-toolbar-container">
         <span class="ql-format-group">
