Ajax Block. Log Fixes.

--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -35,6 +35,7 @@
     <js>modernizr</js>
     <js>Default:activelink</js>
     <js>Default:ajaxlink</js>
+    <js>Default:ajaxblock</js>
 
     <place>CSS</place>
     <jsrun>
