--- a/src/Assets/bootstrap/Developer.html
+++ b/src/Assets/bootstrap/Developer.html
@@ -2,6 +2,7 @@
         <div id="devpanel" class="alert alert-info" style="display: none; position: fixed; top: 15px; left: 25%; z-index: 99;">
             <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
             <h4>Developers</h4>
+            <call>HTTP.Proto</call><call>HTTP.Host</call><call>HTTP.URI</call>
             <div><strong>Environment:</strong></div>
             <call>Environment</call>
             <div><strong>Project Version</strong></div>
