--- a/src/Assets/bootstrap/Widgets/Form/Quill.html
+++ b/src/Assets/bootstrap/Widgets/Form/Quill.html
@@ -20,7 +20,7 @@
     });
 </jsrun>
 
-<label for="<k>ID</k>"><l><k>Label</k></l>:</label>
+<label for="<k>ID</k>"> <l><k>Label</k></l>: <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if></label>
 <div class="quill-widget form-group">
     <div class="hidden" id="<k>ID</k>_Data"><k>Value</k></div>
     <div id="full-toolbar<k>ID</k>" class="toolbar ql-toolbar-container">
