--- a/src/Assets/bootstrap/Widgets/Form/Textarea.html
+++ b/src/Assets/bootstrap/Widgets/Form/Textarea.html
@@ -1,7 +1,5 @@
 <div class="form-group">
-    <label for="<k>ID</k>"> <l><k>Label</k></l>:
-        <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if>
-    </label>
+    <label for="<k>ID</k>"> <l><k>Label</k></l>: <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if></label>
     <k>HTML</k>
     <if value="<k>Help</k>" eq="1">
         <div class="help-block"><l><k>Entity</k>.Help:<k>Key</k></l></div>
