--- a/src/Assets/Photo/Control/Show/Short.html
+++ b/src/Assets/Photo/Control/Show/Short.html
@@ -23,15 +23,9 @@
             </div>
             <a href="/<k>Slug</k>"><h4><k>Title</k></h4></a>
 
-            <if value="<k>Menu</k>" eq="1">
-                <div class="label label-danger pull-right">Меню</div>
-            </if>
-
             <if value="<k>Priority</k>" gt="0">
-                <l>Page.Entity:Priority</l>: <k>Priority</k>
+                <div class="label label-info"><k>Priority</k></div>
             </if>
-
-            <div><k>Words</k> слов, <k>Chars</k> знаков без пробелов, <k>Sickness</k>% тошноты.</div>
         </div>
     </div>
 </li>
