--- a/src/Assets/Entity/Delete.html
+++ b/src/Assets/Entity/Delete.html
@@ -7,7 +7,7 @@
         <div class="panel-footer">
             <button type="submit" class="btn btn-danger">Удалить</button>
             <a href="<call>BackURL</call>" class="btn btn-success">Я передумал</a>
-            <input type="hidden" name="BackURL" value="<call>Request.BackURL</call>" />
+            <input type="hidden" name="BackURL" value="<call>BackURL</call>" />
         </div>
     </div>
 </form>
