--- a/src/Assets/Gamification/Achievement/Show/Short.html
+++ b/src/Assets/Gamification/Achievement/Show/Short.html
@@ -8,7 +8,7 @@
                 "Where": "<k>Award</k>.png"
             },
             "Default": "Default.png",
-            "Thumb": true,
+            "Resample": true,
             "Width": 64,
             "Class": "img img-responsive img-hspaced",
             "Alt": "<l>Gamification.Achievement.<k>Award</k>:Title</l>"
