--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -41,7 +41,7 @@
           $('[data-toggle="tooltip"]').tooltip()
     </jsrun>
 </head>
-<body>
+<body itemscope itemtype="http://schema.org/WebSite">
     <layout>Project:Audience</layout>
     <place>Content</place>
     <place>JS</place>
