--- a/src/Assets/Control/Pills/Inline.html
+++ b/src/Assets/Control/Pills/Inline.html
@@ -1,5 +1,5 @@
 <li>
-    <a class="no-border" href="/control/<call>Entity</call>/Touch/<k>ID</k>">
+    <a class="no-border" href="/control/<call>Entity</call>/Touch/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
         <span class="fa fa-refresh" data-toggle="tooltip" title="Обновить"></span>
     </a>
 </li>
@@ -9,12 +9,12 @@
     </a>
 </li>
 <li>
-    <a class="no-border" href="/control/<call>Entity</call>/Update/<k>ID</k>">
+    <a class="no-border" href="/control/<call>Entity</call>/Update/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
         <span class="fa fa-pencil" data-toggle="tooltip" title="Редактировать"></span>
     </a>
 </li>
 <li>
-    <a class="no-border" href="/control/<call>Entity</call>/Delete/<k>ID</k>">
+    <a class="no-border" href="/control/<call>Entity</call>/Delete/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
         <span class="fa fa-trash-o" data-toggle="tooltip" title="Удалить"></span>
     </a>
 </li>
