--- a/src/Assets/Control/Pills/Top.html
+++ b/src/Assets/Control/Pills/Top.html
@@ -7,7 +7,7 @@
         <span class="fa fa-wrench"></span>
     </a>
     <a class="btn btn-default"
-       href="/control/<call>Entity</call>/Touch/<k>ID</k>"
+       href="/control/<call>Entity</call>/Touch/<k>ID</k>?BackURL=<call>HTTP.URL</call>"
         data-toggle="tooltip" data-title="Обновить" data-placement="left">
         <span class="fa fa-refresh"></span>
     </a>
@@ -20,11 +20,11 @@
        data-toggle="tooltip" data-title="Просмотреть" data-placement="left">
         <span class="fa fa-eye"></span>
     </a>
-    <a class="btn btn-default" href="/control/<call>Entity</call>/Update/<k>ID</k>"
+    <a class="btn btn-default" href="/control/<call>Entity</call>/Update/<k>ID</k>?BackURL=<call>HTTP.URL</call>"
        data-toggle="tooltip" data-title="Редактировать" data-placement="left">
         <span class="fa fa-pencil"></span>
     </a>
-    <a class="btn btn-danger" href="/control/<call>Entity</call>/Delete/<k>ID</k>"
+    <a class="btn btn-danger" href="/control/<call>Entity</call>/Delete/<k>ID</k>?BackURL=<call>HTTP.URL</call>"
        data-toggle="tooltip" data-title="Удалить" data-placement="left">
         <span class="fa fa-trash-o"></span>
     </a>
