--- a/src/Assets/Control/Pills/RUD.html
+++ b/src/Assets/Control/Pills/RUD.html
@@ -1,15 +1,15 @@
 <div class="btn-toolbar btn-group-sm hidden-print">
     <a class="btn btn-default"
-       href="/control/<call>Entity</call>/Touch/<k>ID</k>">
+       href="/control/<call>Entity</call>/Touch/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
         <span class="fa fa-refresh" data-toggle="tooltip" title="Обновить"></span>
     </a>
-    <a class="btn btn-default" href="/control/<call>Entity</call>/Show/<k>ID</k>">
+    <a class="btn btn-default" href="/control/<call>Entity</call>/Show/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
         <span class="fa fa-eye" data-toggle="tooltip" title="Просмотреть"></span>
     </a>
-    <a class="btn btn-default" href="/control/<call>Entity</call>/Update/<k>ID</k>">
+    <a class="btn btn-default" href="/control/<call>Entity</call>/Update/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
         <span class="fa fa-pencil" data-toggle="tooltip" title="Редактировать"></span>
     </a>
-    <a class="btn btn-danger" href="/control/<call>Entity</call>/Delete/<k>ID</k>">
+    <a class="btn btn-danger" href="/control/<call>Entity</call>/Delete/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
         <span class="fa fa-trash-o" data-toggle="tooltip" title="Удалить"></span>
     </a>
 </div>
