--- a/src/Assets/bootstrap/Widgets/Breadcrumb/Active.html
+++ b/src/Assets/bootstrap/Widgets/Breadcrumb/Active.html
@@ -1,1 +1,5 @@
-<li><a href="<k>URL</k>"><k>Title</k></a></li>
+<li itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
+    <a href="<k>URL</k>" itemprop="url">
+        <span itemprop="title"><k>Title</k></span>
+    </a>
+</li>
