--- a/src/Assets/bootstrap/Widgets/Breadcrumb.html
+++ b/src/Assets/bootstrap/Widgets/Breadcrumb.html
@@ -1,3 +1,3 @@
-<ul class="breadcrumb" itemprop="breadcrumb">
+<ul class="breadcrumb" itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
     <k>Breadcrumbs</k>
 </ul>
