Back to Schema.org

--- a/src/Assets/bootstrap/Widgets/Breadcrumb/Active.html
+++ b/src/Assets/bootstrap/Widgets/Breadcrumb/Active.html
@@ -1,5 +1,5 @@
-<li itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
-    <a href="<k>URL</k>" itemprop="url">
-        <span itemprop="title"><k>Title</k></span>
+<li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+    <a href="<k>URL</k>" itemprop="item">
+        <span itemprop="name"><k>Title</k></span>
     </a>
 </li>
