--- a/src/Assets/Security/Auth/Password.html
+++ b/src/Assets/Security/Auth/Password.html
@@ -7,7 +7,7 @@
             </div>
             <div class="form-group">
                 <label for="Password"><l>User.Entity:Password.First</l>:</label>
-                <input class="form-control input-lg" id="Password" type="password" name="Password" value="" placeholder="Пароль" required="required" />
+                <input class="form-control input-lg" id="Password" type="password" name="Password" value="" placeholder="<l>User.Entity:Password.First</l>" required="required" />
                 <a href="/forgot" class="help-block"><l>User.Reset:Title</l></a>
             </div>
 
