--- a/src/Assets/bootstrap/Widgets/Form/Password.html
+++ b/src/Assets/bootstrap/Widgets/Form/Password.html
@@ -21,6 +21,6 @@
     <div class="input-group">
         <input id="<k>ID</k>2" data-equals="<k>Name</k>"
                class="form-control" type="password" <block>required="<k>Required</k>"</block>
-        autocomplete="off" value="<k>Value</k>" placeholder="Пароли должны совпадать" />
+        autocomplete="off" value="<k>Value</k>" placeholder="<l>User.Entity:Password.Equal</l>" />
     </div>
 </div>
