--- a/src/Assets/bootstrap/Widgets/Form/Password/Two.html
+++ b/src/Assets/bootstrap/Widgets/Form/Password/Two.html
@@ -20,7 +20,7 @@
                 <input data-equals="<k>Name</k>"
                        class="form-control" type="password" <block>required="<k>Require
                 d</k>"</block>
-                autocomplete="off" value="<k>Value</k>" placeholder="Пароли должны совпадать" />
+                autocomplete="off" value="<k>Value</k>" placeholder="<l>User.Entity:Password.MustEqual</l>" />
         </div>
     </div>
 </div>
