--- a/src/Assets/bootstrap/Widgets/Form.html
+++ b/src/Assets/bootstrap/Widgets/Form.html
@@ -10,7 +10,7 @@
         </div>
         <div class="panel-footer text-center">
             <button type="submit" class="btn btn-lg btn-primary">
-                <l><k>Entity</k>.Control:Options.<k>Purpose</k></l>
+                <l><k>Entity</k>.<k>Purpose</k>:Title</l>
             </button>
         </div>
     </div>
