--- a/src/Assets/bootstrap/Widgets/Form/Password/One.html
+++ b/src/Assets/bootstrap/Widgets/Form/Password/One.html
@@ -1,10 +1,8 @@
 <div class="form-group">
     <label for="<k>ID</k>">
         <l><k>Label</k></l>:
-
-        <if value="<k>Required</k>" eq="required"><span class="required-star">*</span></if>
-
-        <if value="<k>Filled</k>" eq="1"><span class="filled-star" title="Рекомендуемое поле">*</span></if>
+        <if value="<k>Required</k>" eq="required" title="<l>Entity.Form:Recommended</l>"><span class="required-star">*</span></if>
+        <if value="<k>Filled</k>" eq="1"><span class="filled-star" title="<l>Entity.Form:Recommended</l>">*</span></if>
     </label>
     <k>HTML</k>
 </div>
