--- a/src/Assets/Error/404E.html
+++ b/src/Assets/Error/404E.html
@@ -1,5 +1,5 @@
-<breadcrumb href="<call>HTTP.URL</call>">Ошибка 404</breadcrumb>
-<subtitle>404: Страница не найдена</subtitle>
+<breadcrumb href="<call>HTTP.URL</call>">Нет данных по запросу</breadcrumb>
+<subtitle>Нет данных</subtitle>
 <keyword>ошибка, ошибка 404, страница не найдена</keyword>
 <description>Это страница ошибки 404.
     Вы обратились к странице, которой нет.<br/>
@@ -9,8 +9,7 @@
 
 <div class="alert alert-danger">
     <h4>Что случилось?</h4>
-    Вы обратились к странице, которой нет.<br/>
-Возможно, вы опечатались, либо страница была удалена.
+    Вы обратились к странице, на которой пока нечего смотреть.<br/>
 </div>
 <hr>
 <div class="alert alert-success">
