--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -38,7 +38,8 @@
 
     <place>CSS</place>
     <jsrun>
-          $('[data-toggle="tooltip"]').tooltip()
+          $('[data-toggle="tooltip"]').tooltip();
+          $('[data-toggle="popover"]').popover();
     </jsrun>
 </head>
 <body itemscope itemtype="http://schema.org/WebSite">
