--- a/src/Assets/Gamification/Achievement/Show/Short.html
+++ b/src/Assets/Gamification/Achievement/Show/Short.html
@@ -9,6 +9,7 @@
             },
             "Default": "Default.png",
             "Resample": true,
+            "Height": 64,
             "Width": 64,
             "Class": "img img-responsive img-hspaced",
             "Alt": "<l>Gamification.Achievement.<k>Award</k>:Title</l>"
