--- a/src/Assets/Gamification/Achievement/Show/Default.html
+++ b/src/Assets/Gamification/Achievement/Show/Default.html
@@ -10,6 +10,7 @@
             "Default": "Default.png",
             "Thumb": true,
             "Width": 64,
+            "Height": 64,
             "Class": "img img-responsive img-hspaced",
             "Alt": "<l>Gamification.Achievement.Default:Title</l>"
         }
