--- a/src/Assets/Gamification/Achievement/Show/Default.html
+++ b/src/Assets/Gamification/Achievement/Show/Default.html
@@ -8,7 +8,7 @@
                 "Where": "Default.png"
             },
             "Default": "Default.png",
-            "Thumb": true,
+            "Resample": true,
             "Width": 64,
             "Height": 64,
             "Class": "img img-responsive img-hspaced",
