--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -47,6 +47,7 @@
     <place>Content</place>
     <place>JS</place>
     <layout>bootstrap:Developer</layout>
+    <layout>Error:Catcher</layout>
     <layout>bootstrap:SEO</layout>
 </body>
 </html>
