--- a/src/Assets/Project/OpenGraph.html
+++ b/src/Assets/Project/OpenGraph.html
@@ -1,3 +1,4 @@
+<meta property="og:type" content="website" />
 <meta property="og:url" content="<call>HTTP.Proto</call><call>HTTP.Host</call><call>HTTP.URL</call>"/>
 <meta property="og:title" content="<header/>"/>
 <meta property="og:locale" content="<call>Locale</call>"/>
