--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -9,6 +9,8 @@
     <title/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="shortcut icon" href="<call>HTTP.Proto</call><call>HTTP.Host</call>/favicon.ico" type="image/x-icon">
+
     <place>CSS</place>
 
     <css>bootstrap</css>
