--- a/src/Assets/bootstrap/Developer.html
+++ b/src/Assets/bootstrap/Developer.html
@@ -2,6 +2,7 @@
         <div id="devpanel" class="alert alert-info" style="display: none; position: fixed; top: 15px; left: 25%; z-index: 99;">
             <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
             <h4>Developers</h4>
+            <div><strong>URI:</strong></div>
             <call>HTTP.Proto</call><call>HTTP.Host</call><call>HTTP.URI</call>
             <div><strong>Environment:</strong></div>
             <call>Environment</call>
@@ -23,10 +24,6 @@
             <timer>View</timer> msec.
             <div><strong>From &alpha; to &omega;</strong></div>
             <div id="overall-profiling" style="display: none;"><call>Started</call></div>
-            <div><strong>URL</strong></div>
-            <div>
-                <call>HTTP.URI</call>
-            </div>
             <div><strong>Browser</strong></div>
             <div>
                 <call>HTTP.User Agent</call>
