--- a/src/Assets/User/Show/Full.html
+++ b/src/Assets/User/Show/Full.html
@@ -1,6 +1,6 @@
 <subtitle><k>Title</k></subtitle>
 <breadcrumb href="/user/<k>ID</k>"><k>Title</k></breadcrumb>
-
+<h2 class="page-header"><k>Title</k></h2>
 <div class="panel panel-default">
     <div class="panel-body">
         <div class="row">
@@ -19,9 +19,6 @@
                 </image>
             </div>
             <div class="col-lg-10">
-                <h2>
-                    <k>Title</k>
-                </h2>
                 <h4>
                     <k>Location</k>
                     <entity>Country:<k>Country</k></entity>
