--- a/src/down.html
+++ b/src/down.html
@@ -16,6 +16,31 @@
 </head>
 <body>
 <img src="http://trickyplan.ru/img/down.png" alt="Ведутся технические работы"/>
-<!-- Ничего интересного в исходниках нет -->
 </body>
 </html>
+
+<!--
+Наш движок так охуенен, что нам приходится использовать утяжелители.
+
+AhtuNg3s PaeNg6ee zoo6VaeF dohWaid1 aiChue4x at8Mun2e aic0aeG1 voh7Ievo
+Moh9iung ahSie5oo Ufeeth8y ooWee3xe AQuail4f euPh2yai OVa5Ey4c uQu3dahH
+Vah4uc9a Eis3jied iCho3mew Eobooh4m ieLi2IeG IRoth3xu ooqu4Fey Biophae3
+if4eeVar uZuez4qu ul4veSah Iihee4on xaizi9Th aVa2Saek eipieSh5 Taid7boa
+igh9BeiZ OoP2avoW aiqu0Io3 xioRaez5 aevaeN1u oaShie5E aivi1Iah kee4EiNi
+ait5eeS2 Ahceexu3 eiThee1g Roqu6yob Eeph5pae ShuuSei7 Tujequ9p zoo3Gi0c
+PheiHa2a oc3Eeni4 Oog8Chee hie4eiQu Zoh3loo7 ua7Ooqu9 cai4Ao2z Oa8Eirie
+Ier3eive iaDeew2Y xiF9aeza ahF0Ivog Ohlaeth1 zoh1ohJa ai7AePho oWieyae5
+AhzieG7v Ie0waipu eil2Choo Acae4Uw7 Aenuo6oo Hif3ohw8 aThie0ei ohFi6vaw
+va1AhTh3 oY6quoon ailaeNg5 ol9naeSe Xa0oe1Me suy7ooYe thie5Ruf quighi1Z
+Xeet6Aht Ohd8Luo2 Mahr4ohw Iehae9ce Le7Eeg3M eiGhoot5 Quoh8oru EiPom5oh
+ooPiet5p eph1ooDe Roo9Gee9 sai7eeHa Theepi7u aeNg1aiz oJab5xoh Viraic2Y
+niaRie5i liemof5P Yoiteed0 ohnoC2ai SohJeiP5 Ohyie3Ph so9iiChi OoJa4be0
+Er1ohbah Wie4udee quaPh6ie ooWoo9ro aipae7iG Eew5aech rahsai8E Eeghai4a
+mei0Leif Rah7died Eiph3ahy ezee9Loh Paibi4eC ASee5uqu daeYo5Ph moy2Eeth
+hiePhee5 Ooqu4uvu Zeegh7ai eePhie4b eeF3iHoo niez0iPh Ietoox1u Aey5iem8
+chooX4So aiGan5hi teroya7U Tahg6aeH rie2go6A feiK4quo Oaphie4r eeJ3chai
+ge8QuouS Poo6Ooza ooNotei2 wuikeiY7 oghie5oB al6la9He ohDoh3Aa YieN4xei
+puBai9th cu9Kod4e Eelich5t AuSh4aig uu6YaiK9 phie8aiW vie1aeLu Kae9Eimu
+ool1Ta4i bai6Opoo ierai5Ga laotae7G eiD9iala Goh3culu Cheith6I tho1Iw4a
+
+-->
