--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -24,7 +24,7 @@
 
     <place>CSS</place>
 
-    <css>bootstrap:min</css>
+    <css>bootstrap</css>
     <css>bootstrap:theme</css>
     <css>bootstrap:addons</css>
     <css>font-awesome</css>
