--- a/src/Assets/Journal/Show/Full.html
+++ b/src/Assets/Journal/Show/Full.html
@@ -9,7 +9,7 @@
         <td><k>IP</k></td>
     </tr>
     <tr>
-        <td>User Agent</td>
-        <td><k>User Agent</k></td>
+        <td>Agent</td>
+        <td><k>Agent</k></td>
     </tr>
 </table>
