--- a/src/Assets/bootstrap/Widgets/Form.html
+++ b/src/Assets/bootstrap/Widgets/Form.html
@@ -1,4 +1,4 @@
-<form role="form" method="post" action="<k>Action</k>" enctype="multipart/form-data" autocomplete="on">
+<form method="post" action="<k>Action</k>" enctype="multipart/form-data" autocomplete="on">
     <div class="panel panel-default">
         <block>
             <div class="panel-heading">
