--- a/src/Assets/bootstrap/Widgets/Form/Checkbox.html
+++ b/src/Assets/bootstrap/Widgets/Form/Checkbox.html
@@ -5,4 +5,7 @@
             <block>required="<k>Required</k>"</block> />
             <k>Label</k>
     </label>
+    <if value="<k>Help</k>" eq="1">
+        <div class="help-block"><l><k>Entity</k>.Help:<k>Key</k></l></div>
+    </if>
 </div>
