Various Fixes. Regex Router Mixin Support.

--- a/src/Assets/bootstrap/Developer.html
+++ b/src/Assets/bootstrap/Developer.html
@@ -56,6 +56,6 @@
                 time.toFixed(0) + ' msec.'
             ).show();
 
-            $(document).bind('keydown', '0', function() { $('#devpanel').toggle()} );
+            $(document).bind('keydown', '`', function() { $('#devpanel').toggle()} );
         </jsrun>
 </access>
