--- a/src/Assets/bootstrap/Widgets/Form/Typeahead.html
+++ b/src/Assets/bootstrap/Widgets/Form/Typeahead.html
@@ -11,7 +11,7 @@
       <block>
           <span class="input-group-addon"><k>Postfix</k></span>
       </block>
-        <input type="hidden" name="<k>Name</k>" id="<k>ID</k>_hidden" value="<k>Value</k>"/>
+        <input type="hidden" name="<k>Name</k>" id="<k>ID</k>_hidden" value="<k>HValue</k>"/>
     </div>
     <if value="<k>Help</k>" eq="1">
         <div class="help-block"><l><k>Entity</k>.Help:<k>Key</k></l></div>
