--- a/src/Assets/bootstrap/Widgets/Form/Datepicker.html
+++ b/src/Assets/bootstrap/Widgets/Form/Datepicker.html
@@ -1,4 +1,5 @@
 <js>:bower/moment/min/moment.min</js>
+<js>:bower/moment/locale/<call>Locale</call></js>
 <js>:bower/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min</js>
 <css>:bower/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min</css>
 
@@ -18,7 +19,9 @@
     {
         $('#<k>ID</k>').datetimepicker(
         {
-            format: 'DD.MM.YYYY HH:mm:ss'
+            format: 'DD.MM.YYYY HH:mm:ss',
+            sideBySide: true,
+            locale: "<call>Locale</call>"
         });
     });
 </jsrun>
