--- a/src/Assets/bootstrap/Widgets/Form/Datepicker.html
+++ b/src/Assets/bootstrap/Widgets/Form/Datepicker.html
@@ -21,6 +21,7 @@
         {
             format: 'DD.MM.YYYY HH:mm:ss',
             sideBySide: true,
+            showTodayButton: true,
             locale: "<call>Locale</call>"
         });
     });
